// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuroCurrency always print decimal places 1`] = `
<div>
  <span
    class="makeStyles-euroCurrency-3 makeStyles-euroCurrency-4"
  >
    1.337,00 €
  </span>
</div>
`;

exports[`EuroCurrency format currency 1`] = `
<div>
  <span
    class="makeStyles-euroCurrency-1 makeStyles-euroCurrency-2"
  >
    1.337,69 €
  </span>
</div>
`;

exports[`EuroCurrency only print 2 decimal places 1`] = `
<div>
  <span
    class="makeStyles-euroCurrency-5 makeStyles-euroCurrency-6"
  >
    13,37 €
  </span>
</div>
`;
